--- a/process.html
+++ b/process.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title class="page_title">Olderbrother | Process</title>
+    <title class="page_title">Olderbrother | Products</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/grids.css" />
@@ -13,44 +13,27 @@
   <body>
 
     <header>
-
-      <div id="global_nav">
-
-        <!-- Desktop Navigation -->
-        <div class="desktop_nav">
-          <nav class="main_nav">
-            <a href="index.html" id="logo-wordmark" class="main_nav_item">
-              <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
-            </a>
-            <a href="#shop" class="main_nav_item">Shop</a>
-            <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="#process" class="main_nav_item"><span class="current_link">Process</span></a>
-            <a href="#journal" class="main_nav_item">Journal</a>
-          </nav>
-        </div>
-
-        <!-- Mobile Navigation -->
-        <div class="mobile_nav">
-          <nav class="main_nav">
-            <a href="index.html" id="logo-icon" class="main_nav_item">
-              <img src="img/olderbrother-icon.png" alt="Olderbrother Logo Icon">
-            </a>
-</a>
-            <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="#process" class="main_nav_item">Process</a>
-            <a href="#journal" class="main_nav_item">Journal</a>
-          </nav>
-        </div>
-
-      </div>
-
+      <h1>Olderbrother Style Guide Template</h1>
+      <p>This styleguide is a resource to provide a common language around Olderbrother's design patterns.</p>
+      <nav class="main_nav">
+        <a href="index.html" class="main_nav_item">Style Guide</a>
+        <a href="product-page.html" class="main_nav_item"><span class="current_link">Products</span></a>
+        <a href="checkout-cart.html" class="main_nav_item">Checkout</a>
+        <a href="payment-form.html" class="main_nav_item">Payment</a>
+      </nav>
     </header>
+
+
+
+    <section id = "process">
+
+
+
+    </section>
 
     <section>
 
-      <!-- PROCESS -->
-      <!-- ABOUT THE COMPANY -->
-      <!-- HOW TO CONTACT COMPANY (STORE LOCATION) -->
+      <!-- BANNER SHOT, MULTI-PRODUCT LIST, FOOTER -->
 
     </section>
 
