--- a/journal.html
+++ b/journal.html
@@ -7,15 +7,14 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/grids.css" />
+    <link rel="stylesheet" type="text/css" href="css/journal.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-
   <body>
-
     <header>
-
       <div id="global_nav">
-
+        <h1>Olderbrother Style Guide Template</h1>
+        <p>This styleguide is a resource to provide a common language around Olderbrother's design patterns.</p>
         <!-- Desktop Navigation -->
         <div class="desktop_nav">
           <nav class="main_nav">
@@ -24,34 +23,107 @@
             </a>
             <a href="#shop" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="#process" class="main_nav_item">Process</a>
+            <a href="process.html" class="main_nav_item">Process</a>
             <a href="#journal" class="main_nav_item"><span class="current_link">Journal</span></a>
           </nav>
         </div>
-
         <!-- Mobile Navigation -->
         <div class="mobile_nav">
           <nav class="main_nav">
             <a href="index.html" id="logo-icon" class="main_nav_item">
               <img src="img/olderbrother-icon.png" alt="Olderbrother Logo Icon">
             </a>
-</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="#process" class="main_nav_item">Process</a>
-            <a href="#journal" class="main_nav_item">Journal</a>
+            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="#journal" class="main_av_iÂtem">Journal</a>
           </nav>
         </div>
-
       </div>
-
     </header>
+    <!-- JOURNAL -->
+    <!-- COMPANY UPDATES / EVENTS -->
+    <section id="journal">
+      <div class="main_journal">
+        <div class="box">
+          <div class="box-image">
+            <div class="image-link-container">
+              <a href="#"><img src="img/saffron-dye.jpg" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
+              <div class="img-hover-box">
+                <div class="img-hover-text">Olderbrother Featured in Bon Appétit</div>
+              </div>
+            </div>
+          </div>
+          <div class="box-text">
+            <a href="#">
+              <h3>Olderbrother Featured in Bon Appétit</h3>
+            </a>
+            <h5>By Amiel Stanek</h5>
+            <h5>Photos by Alex Lau</h5>
+            <p>Bobby Bonaparte and Max Kingery, the duo behind the fashion line Olderbrother, could give a TED Talk on the nightmarish impact the garment industry has on the environment. </p>
 
-    <section>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <div class="image-link-container">
+              <a href="#"><img src="img/imagery03.jpg" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
+              <div class="img-hover-box">
+                <div class="img-hover-text">Hand Me Downs - NYC Pop Up</div>
+              </div>
+            </div>
+          </div>
+          <div class="box-text">
+            <a href="#">
+              <h3>Hand Me Downs - NYC Pop Up</h3>
+            </a>
+            <h5>Dates: Wednesday September 13 - Monday September 18</h5>
+            <h5>Hours: 11-6</h5>
+            <h5>Address:171 Elizabeth Street, New York, NY 10012</h5>
+            <p>We're popping up in New York to present our latest Hand Me Downs collection.
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <div class="image-link-container">
+              <a href="#"><img src="img/imagery06.jpg" class="img-link" alt="The Gallos - Morning Routine"></a>
+              <div class="img-hover-box">
+                <div class="img-hover-text">The Gallos - Morning Routine</div>
+              </div>
+            </div>
+          </div>
+          <div class="box-text">
+            <a href="#">
+              <h3>The Gallos - Morning Routine</h3>
+            </a>
+            <h5>@carissajg & @andrewgallo</h5>
+            <h5>May 02, 2017</h5>
+            <p>Andrew and Carissa Gallo stick to a fairly regimented state of morning affairs. Good habits are formed through repetition. At the finest hour of golden light they awaken to brainstorm breakfast ideas and how to maximize the day.
+            </p>
+          </div>
 
-      <!-- JOURNAL -->
-      <!-- COMPANY UPDATES / EVENTS -->
 
-    </section>
-
+        </div>
+        <div class="box">
+          <div class="box-image">
+            <div class="image-link-container">
+              <a href="#"><img src="img/imagery02.jpg" class="img-link" alt="Connecting the Dots"></a>
+              <div class="img-hover-box">
+                <div class="img-hover-text">Connecting the Dots</div>
+              </div>
+            </div>
+          </div>
+          <div class="box-text">
+            <a href="#">
+              <h3>Connecting the Dots</h3>
+            </a>
+            <h5>Amanda Ringstad</h5>
+            <h5>Nov 30, 2016</h5>
+            <p>Amanda Ringstad connects the dots of natural dyes to our garments. <br>Interspersed between natural dye mobiles made of cochineal, iron and fustic are various bodies from Autumn Winter 2016.
+            </p>
+          </div>
+        </div>
+      </div>
+  </section>
   </body>
 </html>
