Update Journal and Process html with new nav bar
some edits in main.css

--- a/product_template.html
+++ b/product_template.html
@@ -49,7 +49,7 @@
     <section>
 
       <!-- ONE PRODUCT DETAILED VIEW -->
-      <!-- PURCHASING PROCESS -->
+      <!-- PURCHASING PROCESS (use tabindex)-->
       <!-- USER FEEDBACK (REVIEWS) ON PRODUCT -->
 
     </section>
