--- a/process.html
+++ b/process.html
@@ -14,13 +14,35 @@
   <body>
 
     <header>
-      <h1>Olderbrother Style Guide Template</h1>
-      <p>This styleguide is a resource to provide a common language around Olderbrother's design patterns.</p>
-      <nav class="main_nav">
-        <a href="index.html" class="main_nav_item">Style Guide</a>
-        <a href="#about" class="main_nav_item"><span class="current_link">About Company</span></a>
-        <a href="#contact" class="main_nav_item">Contact Information</a>
-      </nav>
+      <div id="global_nav">
+
+        <!-- Desktop Navigation -->
+        <div class="desktop_nav">
+          <nav class="main_nav">
+            <a href="index.html" id="logo-wordmark" class="main_nav_item">
+              <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
+            </a>
+            <a href="#shop" class="main_nav_item">Shop</a>
+            <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
+            <a href="#process" class="main_nav_item">Process</a>
+            <a href="#journal" class="main_nav_item">Journal</a>
+          </nav>
+        </div>
+
+        <!-- Mobile Navigation -->
+        <div class="mobile_nav">
+          <nav class="main_nav">
+            <a href="index.html" id="logo-icon" class="main_nav_item">
+              <img src="img/olderbrother-icon.png" alt="Olderbrother Logo Icon">
+            </a>
+            <a href="#shop" class="main_nav_item">Shop</a>
+            <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
+            <a href="#process" class="main_nav_item">Process</a>
+            <a href="#journal" class="main_nav_item">Journal</a>
+          </nav>
+        </div>
+
+      </div>
     </header>
 
     <section id="about">
