Linked pages together in navbar

--- a/shop.html
+++ b/shop.html
@@ -19,26 +19,26 @@
         <!-- Desktop Navigation -->
         <div class="desktop_nav">
           <nav class="main_nav">
-            <a href="index.html" id="logo-wordmark" class="main_nav_item">
+            <a href="home.html" id="logo-wordmark" class="main_nav_item">
               <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
             </a>
-            <a href="#shop" class="main_nav_item"><span class="current_link">Shop</span></a>
+            <a href="shop.html" class="main_nav_item"><span class="current_link">Shop</span></a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="#process" class="main_nav_item">Process</a>
-            <a href="#journal" class="main_nav_item">Journal</a>
+            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
 
         <!-- Mobile Navigation -->
         <div class="mobile_nav">
           <nav class="main_nav">
-            <a href="index.html" id="logo-icon" class="main_nav_item">
+            <a href="home.html" id="logo-icon" class="main_nav_item">
               <img src="img/olderbrother-icon.png" alt="Olderbrother Logo Icon">
             </a>
-</a>
+            <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="#process" class="main_nav_item">Process</a>
-            <a href="#journal" class="main_nav_item">Journal</a>
+            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
 
