--- a/shop.html
+++ b/shop.html
@@ -46,10 +46,83 @@
 
     </header>
 
-    <section>
+    <!-- MULTI-PRODUCT LISTING-->
 
-      <!-- MULTI-PRODUCT LISTING-->
+    <section id="multiple_products">
 
+      <div class="container">
+
+        <div class="block">
+          <div class="image-link">
+            <a href="#">
+              <img src="img/look-vest-black-indigo.png" alt="Lookbook - Vest">
+              <img class="hover-img" src="img/vest-black-indigo.png" alt="Vest - Black Indigo">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h2 class="product_name"><a href="#">Vest</a></h2>
+            <h4>Black Indigo</h4>
+            <p class="price">$230.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="#">
+              <img src="img/look-leisure-shirt-white.png" alt="Lookbook - Leisure Shirt">
+              <img class="hover-img" src="img/leisure-shirt-white.png" alt="Vest - Black Indigo">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h2 class="product_name"><a href="#">Leisure Shirt</a></h2>
+            <h4>White</h4>
+            <p class="price">$265.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="#">
+              <img src="img/look-hoodie-sky-indigo.png" alt="Lookbook - Hoodie">
+              <img class="hover-img" src="img/hoodie-sky-indigo.png" alt="Hoodie - Sky Indigo">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h2 class="product_name"><a href="#">Hoodie</a></h2>
+            <h4>Sky Indigo</h4>
+            <p class="price">$225.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="#">
+              <img src="img/look-rugby-shirt-saffron-sky-dark-indigo.png" alt="Lookbook - Rugby Shirt">
+              <img class="hover-img" src="img/rugby-shirt-saffron-sky-dark-indigo.png" alt="Rugby Shirt - Saffron/Sky Indigo/Dark Indigo">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h2 class="product_name"><a href="#">Rugby Shirt</a></h2>
+            <h4>Saffron/Sky Indigo/Dark Indigo</h4>
+            <p class="price">$195.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="#">
+              <img src="img/look-blazer-dark-indigo.png" alt="Lookbook - Blazer">
+              <img class="hover-img" src="img/blazer-dark-indigo.png" alt="Blazer - Dark Indigo">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h2 class="product_name"><a href="#">Blazer</a></h2>
+            <h4>Dark Indigo</h4>
+            <p class="price">$495.00</p>
+          </section>
+        </div>
+
+      </div>
     </section>
 
   </body>
