Fixed Navigation and put page content in .content_container

--- a/checkout_cart.html
+++ b/checkout_cart.html
@@ -47,10 +47,10 @@
     </header>
 
     <!-- CHECKOUT PROCESS - CART -->
+    <div class="content_container">
 
-    <section id="checkout_cart">
+      <section id="checkout_cart">
 
-      <div class="container">
         <table>
             <thead>
               <tr>
@@ -123,14 +123,15 @@
             </tfoot>
 
           </table>
-        </div>
 
         <div class="pay_form_btns">
           <a href="shop.html" class="secondary-btn">Keep Shopping</a>
           <a href="checkout_form.html" class="primary-btn">Proceed to Payment</a>
         </div>
 
-    </section>
+      </section>
+
+    </div>
 
   </body>
 </html>
