--- a/home.html
+++ b/home.html
@@ -46,11 +46,15 @@
 
     </header>
 
-    <section>
+    <div class="content_container">
+
+      <section id="homepage">
 
       <!-- BANNER SHOT, MULTI-PRODUCT LIST, FOOTER -->
 
-    </section>
+      </section>
+
+    </div>
 
   </body>
 </html>
