--- a/product_template.html
+++ b/product_template.html
@@ -50,9 +50,9 @@
     <!-- PURCHASING PROCESS (use tabindex)-->
     <!-- USER FEEDBACK (REVIEWS) ON PRODUCT -->
 
-    <section id="individual_product">
+    <div class="content_container">
 
-      <div class="container">
+      <section id="individual_product">
 
           <div class="block">
             <div class="product_image">
@@ -95,9 +95,9 @@
             </div>
           </div>
 
-      </div>
+      </section>
 
-    </section>
+    </div>
 
   </body>
 </html>
