--- a/shop.html
+++ b/shop.html
@@ -47,10 +47,9 @@
     </header>
 
     <!-- MULTI-PRODUCT LISTING-->
+    <div class="content_container">
 
-    <section id="multiple_products">
-
-      <div class="container">
+      <section id="multiple_products">
 
         <div class="block">
           <div class="image-link">
@@ -136,8 +135,9 @@
           </section>
         </div>
 
-      </div>
-    </section>
+      </section>
+      
+    </div>
 
   </body>
 </html>
