Made shop.html and product_template.html responsive

--- a/product-page.html
+++ b/product-page.html
@@ -31,7 +31,7 @@
 
       <h3 class="sub_heading">Multiple Product Listing</h3>
 
-      <div class="container">
+      <div class="content_container">
 
         <div class="block">
           <div class="image-link">
@@ -113,7 +113,7 @@
 <br>
       &nbsp;&lt;h3 class="sub_heading"&gt;Multiple Product Listing&lt;/h3&gt;<br>
 <br>
-      &nbsp;&lt;div class="container"&gt;<br>
+      &nbsp;&lt;div class="content_container"&gt;<br>
 <br>
       &nbsp;&nbsp;&lt;div class="block"&gt;<br>
       &nbsp;&nbsp;&nbsp;&lt;div class="image-link"&gt;<br>
@@ -192,7 +192,7 @@
     <section id="individual_product">
       <h3 class="sub_heading">Individual Product Listing</h3>
 
-      <div class="container">
+      <div class="content_container">
 
           <div class="block">
             <div class="product_image">
@@ -244,7 +244,7 @@
       &lt;section id="individual_product"&gt;<br>
       &nbsp;&lt;h3 class="sub_heading"&gt;Individual Product Listing&lt;/h3&gt;<br>
 <br>
-      &nbsp;&lt;div class="container"&gt;<br>
+      &nbsp;&lt;div class="content_container"&gt;<br>
 <br>
       &nbsp;&nbsp;&nbsp;&lt;div class="block"&gt;<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&lt;div class="product_image"&gt;<br>
