--- a/product_template.html
+++ b/product_template.html
@@ -63,7 +63,7 @@
           <div class="block">
             <div class="product_details">
               <h1 class="product_name">Raglan Crew</h1>
-              <h4>Tie Dye Sky Indigo</h4>
+              <h4 class="product_clr">Tie Dye Sky Indigo</h4>
               <p class="price">$225.00</p>
 
               <div class="product_options">
