--- a/process.html
+++ b/process.html
@@ -44,53 +44,84 @@
 
       </div>
     </header>
-
-    <div class="content_container">
-
+   <div class="content_container">
       <section id="about">
-
-        <p>
-          We are at the forefront of the slow fashion revolution. Analogous to the recently shifted food paradigm, we insist on the most premium and transparent methods of garment creation. We employ a hybrid of artisan-care, environment-sensitivity and local machine-power. By incorporating eco-friendly textiles, natural dyeing and American manufacturing, each Olderbrother garment is subtly unique. At the end of the garments’ lifetime, it can be buried in your backyard.
-        </p>
-        <h3>Founders</h3>
-        <img src="img/founder.jpg" alt="Founders">
-        <h4>Bobby Bonaparte & Max Kingery</h4>
-        <p>
-          Bonaparte and Kingery met each other in 2013. And then, they came together as business partners just as serendipitously. They are both Bonaparte and Kingery had grown up in Portland, Ore. <br>
-          <br>
-          They quietly construct their whimsical unisex clothes from sustainably harvested fabrics like organic Japanese cotton and use vivid dyes made from almost exclusively edible pigments. In conceiving each season’s limited-run colorways, they draw inspiration from ingredients that are animating the wellness world at that particular moment—fiery-orange turmeric, golden saffron, the muted earth tones of healing mushrooms—and spend months of R&D figuring out how to best translate those hues to evocative, relatable garments that integrate seamlessly into people’s lives.
-        </p>
-
-      </section>
-
-      <section id="contact">
-        
-        <h3>Get In Touch</h3>
-        <p>PO Box 28187 <br>
-          Portland, OR 97228 <br>
-          howdy@olderbrother.us <br>
-        </p>
-
-        <div class="content_icon">
-          <ul class="icon_lists">
-            <li class="icon">
-              <span class="iconfont"><a href="https://twitter.com/intent/tweet?source=&text=:%20" target="_blank" title="Tweet">&#xe84c;</a></span>
-            </li>
-            <li class="icon">
-              <span class="iconfont"><a href="https://www.instagram.com/" target="_blank" title="Tweet">&#xe6fc;</a></span>
-            </li>
-            <li class="icon">
-              <span class="iconfont"><a href="http://pinterest.com/pin/create/button/?url=&description=" target="_blank" title="Pin it">&#xe7a8;</a></span>
-            </li>
-            <li class="icon">
-              <span class="iconfont"><a href="https://www.facebook.com/sharer/sharer.php?u=&quote=" title="Share on Facebook" target="_blank">&#xe64e;</a></span>
-            </li>
-          </ul>
+        <div class="about-header">
+          <h3>WHO WE ARE</h3>
+          <hr>
         </div>
-
+        <div class="about-detail">
+          <p>
+            <br><br><br><br>
+            We are at the forefront of the slow fashion revolution. Analogous to the recently shifted food paradigm, we insist on the most premium and transparent methods of garment creation. We employ a hybrid of artisan-care, environment-sensitivity and local machine-power. By incorporating eco-friendly textiles, natural dyeing and American manufacturing, each Olderbrother garment is subtly unique. At the end of the garments’ lifetime, it can be buried in your backyard.
+          </p>
+        </div>
+        <div class="about-header">
+          <h3>Founders</h3>
+          <br>
+          <p>
+            Bonaparte and Kingery met each other in 2013. Then, they came together as business partners just as serendipitously.
+          </p>
+          <br>
+          <hr>
+        </div>
+        <div class="about-detail">
+          <br><br><br><br>
+          <table>
+            <tr>
+              <td>
+                <img src="img/BOBBY BONAPARTE.jpg" alt="Founders">
+                <h4>Bobby Bonaparte</h4>
+                <span class="iconfont"><a href="https://twitter.com/intent/tweet?source=&text=:%20" target="_blank" title="Tweet">&#xe84c;</a></span>
+                <span class="iconfont"><a href="https://www.facebook.com/sharer/sharer.php?u=&quote=" title="Share on Facebook" target="_blank">&#xe64e;</a></span>
+              </td>
+              <td>
+                <img src="img/MAX KINGERY.jpg" alt="Founders">
+                <h4>Max Kingery</h4>
+                <span class="iconfont"><a href="https://twitter.com/intent/tweet?source=&text=:%20" target="_blank" title="Tweet">&#xe84c;</a></span>
+                <span class="iconfont"><a href="https://www.facebook.com/sharer/sharer.php?u=&quote=" title="Share on Facebook" target="_blank">&#xe64e;</a></span>
+              </td>
+            </tr>
+          </table>
+          <br>
+          <p>
+            <br>
+            They quietly construct their whimsical unisex clothes from sustainably harvested fabrics like organic Japanese cotton and use vivid dyes made from almost exclusively edible pigments. In conceiving each season’s limited-run colorways, they draw inspiration from ingredients that are animating the wellness world at that particular moment—fiery-orange turmeric, golden saffron, the muted earth tones of healing mushrooms—and spend months of R&D figuring out how to best translate those hues to evocative, relatable garments that integrate seamlessly into people’s lives.
+          </p>
+        </div>
+          <div class="about-header">
+            <h3>Get In Touch</h3>
+            <br>
+            <hr>
+          </div>
+          <div class="about-detail">
+            <br><br><br><br>
+            <h4>PO Box 28187 <br>
+              Portland, OR 97228 <br>
+              howdy@olderbrother.us <br>
+            </h4>
+            <div class="content_icon">
+              <ul class="icon_lists">
+                <li class="icon">
+                  <span class="iconfont"><a href="https://twitter.com/intent/tweet?source=&text=:%20" target="_blank" title="Tweet">&#xe84c;</a></span>
+                </li>
+                <li class="icon">
+                  <span class="iconfont"><a href="https://www.instagram.com/" target="_blank" title="Tweet">&#xe6fc;</a></span>
+                </li>
+                <li class="icon">
+                  <span class="iconfont"><a href="http://pinterest.com/pin/create/button/?url=&description=" target="_blank" title="Pin it">&#xe7a8;</a></span>
+                </li>
+                <li class="icon">
+                  <span class="iconfont"><a href="https://www.facebook.com/sharer/sharer.php?u=&quote=" title="Share on Facebook" target="_blank">&#xe64e;</a></span>
+                </li>
+              </ul>
+            </div>
+          </div>
       </section>
-
     </div>
+    <section id="footer">
+      <!-- This is footer section -->
+    </section>
 
   </body>
 </html>
