Create home.html and edit checkout and shop files

--- a/checkout_cart.html
+++ b/checkout_cart.html
@@ -54,7 +54,7 @@
         <table>
             <thead>
               <tr>
-                <th scope="col" id="product-table-title" colspan="2">Product</th>
+                <th scope="col" id="product-table-title" colspan="2">Your Items</th>
                 <th scope="col" id="quantity-table-title">Quantity</th>
                 <th scope="col" id="price-table-title">Price</th>
               </tr>
@@ -126,7 +126,7 @@
 
         <div class="pay_form_btns">
           <a href="shop.html" class="secondary-btn">Keep Shopping</a>
-          <a href="checkout_form.html" class="primary-btn">Proceed to Payment</a>
+          <a href="checkout_form.html" class="primary-btn">Proceed to Checkout</a>
         </div>
 
       </section>
