--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           </div>
 
           <div id="swatch3">
-            <h4 class="color_title">#3A3C4E</h4>
+            <h4 class="color_title">#E2DBCC</h4>
           </div>
 
           <div id="swatch4">
@@ -351,7 +351,7 @@
       <h2 class="main_heading">Combined Elements</h2>
 
       <section class="element">
-        
+
         <h3 class="sub_heading">Main Navigation</h3>
 
         <div id="global_nav">
