--- a/product_template.html
+++ b/product_template.html
@@ -97,6 +97,68 @@
 
       </section>
 
+      <section id="featured_products">
+
+        <h3 class="featured-title">You May Also Like</h3>
+        
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-rugby-shirt-natural-sky-indigo.png" alt="Lookbook - Rugby Shirt">
+              <img class="hover-img" src="img/rugby-shirt-natural-sky-indigo.png" alt="Rugby Shirt - Sky Indigo">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">Rugby Shirt</a></h3>
+            <h4>Natural/Sky Indigo</h4>
+            <p class="price">$195.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-geri-pants-sky-indigo.png" alt="Lookbook - Geri Pants">
+              <img class="hover-img" src="img/geri-pants-sky-indigo.png" alt="Geri Pants - Sky Indigo">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">Geri Pants</a></h3>
+            <h4>Sky Indigo</h4>
+            <p class="price">$265.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-hoodie-tie-dye-sky-indigo.png" alt="Lookbook - Hoodie">
+              <img class="hover-img" src="img/hoodie-tie-dye-sky-indigo.png" alt="Hoodie - Tie Dye Sky Indigo">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">Hoodie</a></h3>
+            <h4>Tie Dye Sky Indigo</h4>
+            <p class="price">$225.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-ob-tee-tie-dye-saffron.png" alt="Lookbook - OB Tee">
+              <img class="hover-img" src="img/ob-tee-tie-dye-saffron.png" alt="OB Tee - Tie Dye Saffron">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">OB Tee</a></h3>
+            <h4>Tie Dye Saffron</h4>
+            <p class="price">$120.00</p>
+          </section>
+        </div>
+
+      </section>
+
     </div>
 
   </body>
