--- a/shop.html
+++ b/shop.html
@@ -47,9 +47,57 @@
     </header>
 
     <!-- MULTI-PRODUCT LISTING-->
-    <div class="content_container">
+    <div class="content_container" id="shop">
+
+        <nav id="side_product_filters">
+          <div class="filter-group">
+            <h5 class="filter-group-title">Collections</h5>
+            <a href="#" class="filter-tag">All</a>
+            <a href="#" class="filter-tag">Knits</a>
+            <a href="#" class="filter-tag">Tops</a>
+            <a href="#" class="filter-tag">Bottoms</a>
+            <a href="#" class="filter-tag">Outerwear</a>
+          </div>
+
+          <div class="filter-group">
+            <h5 class="filter-group-title">Colors</h5>
+            <a href="#" class="filter-tag">All</a>
+            <a href="#" class="filter-tag">Saffron</a>
+            <a href="#" class="filter-tag">Sky Indigo</a>
+            <a href="#" class="filter-tag">Dark Indigo</a>
+            <a href="#" class="filter-tag">Black Indigo</a>
+            <a href="#" class="filter-tag">Natural</a>
+            <a href="#" class="filter-tag">Tie Dye</a>
+            <a href="#" class="filter-tag">White</a>
+          </div>
+
+          <div class="filter-group">
+            <h5 class="filter-group-title">Sizes</h5>
+            <a href="#" class="filter-tag">All</a>
+            <a href="#" class="filter-tag">XXS</a>
+            <a href="#" class="filter-tag">XS</a>
+            <a href="#" class="filter-tag">S</a>
+            <a href="#" class="filter-tag">M</a>
+            <a href="#" class="filter-tag">L</a>
+            <a href="#" class="filter-tag">XL</a>
+        </div>
+      </nav>
 
       <section id="multiple_products">
+
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-classic-shirt-white.png" alt="Lookbook - Classic Shirt">
+              <img class="hover-img" src="img/classic-shirt-white.png" alt="Classic Shirt - White">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">Classic Shirt</a></h3>
+            <h4>White</h4>
+            <p class="price">$225.00</p>
+          </section>
+        </div>
 
         <div class="block">
           <div class="image-link">
@@ -68,14 +116,14 @@
         <div class="block">
           <div class="image-link">
             <a href="product_template.html">
-              <img src="img/look-leisure-shirt-white.png" alt="Lookbook - Leisure Shirt">
-              <img class="hover-img" src="img/leisure-shirt-white.png" alt="Vest - Black Indigo">
+              <img src="img/look-jeans-sky-indigo.png" alt="Lookbook - Jeans">
+              <img class="hover-img" src="img/jeans-sky-indigo.png" alt="Jeans - Sky Indigo">
             </a>
           </div>
           <section class="product_quick_info">
-            <h3 class="product_name"><a href="#">Leisure Shirt</a></h3>
-            <h4>White</h4>
-            <p class="price">$265.00</p>
+            <h3 class="product_name"><a href="#">Jeans</a></h3>
+            <h4>Sky Indigo</h4>
+            <p class="price">$230.00</p>
           </section>
         </div>
 
@@ -102,7 +150,7 @@
           </div>
           <section class="product_quick_info">
             <h3 class="product_name"><a href="#">Rugby Shirt</a></h3>
-            <h4>Saffron/Sky Indigo/Dark Indigo</h4>
+            <h4>Saffron/Dark Indigo</h4>
             <p class="price">$195.00</p>
           </section>
         </div>
@@ -132,6 +180,132 @@
             <h3 class="product_name"><a href="#">Raglan Crew</a></h3>
             <h4>Tie Dye Sky Indigo</h4>
             <p class="price">$225.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-blazer-white.png" alt="Lookbook - Blazer">
+              <img class="hover-img" src="img/blazer-white.png" alt="Blazer - White">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">Blazer</a></h3>
+            <h4>White</h4>
+            <p class="price">$495.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-leisure-shirt-white.png" alt="Lookbook - Leisure Shirt">
+              <img class="hover-img" src="img/leisure-shirt-white.png" alt="Leisure Shirt - White">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">Leisure Shirt</a></h3>
+            <h4>White</h4>
+            <p class="price">$265.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-tank-top-sky-indigo.png" alt="Lookbook - Tank Top">
+              <img class="hover-img" src="img/tank-top-sky-indigo.png" alt="Tank Top - Sky Indigo">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">Tank Top</a></h3>
+            <h4>Sky Indigo</h4>
+            <p class="price">$120.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-leisure-shirt-saffron.png" alt="Lookbook - Leisure Shirt">
+              <img class="hover-img" src="img/leisure-shirt-saffron.png" alt="Leisure Shirt - Saffron">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">Leisure Shirt</a></h3>
+            <h4>Saffron</h4>
+            <p class="price">$265.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-rugby-shirt-natural-sky-indigo.png" alt="Lookbook - Rugby Shirt">
+              <img class="hover-img" src="img/rugby-shirt-natural-sky-indigo.png" alt="Rugby Shirt - Sky Indigo">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">Rugby Shirt</a></h3>
+            <h4>Natural/Sky Indigo</h4>
+            <p class="price">$195.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-geri-pants-sky-indigo.png" alt="Lookbook - Geri Pants">
+              <img class="hover-img" src="img/geri-pants-sky-indigo.png" alt="Geri Pants - Sky Indigo">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">Geri Pants</a></h3>
+            <h4>Sky Indigo</h4>
+            <p class="price">$265.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-hoodie-tie-dye-sky-indigo.png" alt="Lookbook - Hoodie">
+              <img class="hover-img" src="img/hoodie-tie-dye-sky-indigo.png" alt="Hoodie - Tie Dye Sky Indigo">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">Hoodie</a></h3>
+            <h4>Tie Dye Sky Indigo</h4>
+            <p class="price">$225.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-ob-tee-tie-dye-saffron.png" alt="Lookbook - OB Tee">
+              <img class="hover-img" src="img/ob-tee-tie-dye-saffron.png" alt="OB Tee - Tie Dye Saffron">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">OB Tee</a></h3>
+            <h4>Tie Dye Saffron</h4>
+            <p class="price">$120.00</p>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="image-link">
+            <a href="product_template.html">
+              <img src="img/look-vest-natural.png" alt="Lookbook - Vest">
+              <img class="hover-img" src="img/vest-natural.png" alt="Vest - Natural">
+            </a>
+          </div>
+          <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">Vest</a></h3>
+            <h4>Natural</h4>
+            <p class="price">$230.00</p>
           </section>
         </div>
 
