--- a/checkout_form.html
+++ b/checkout_form.html
@@ -51,8 +51,8 @@
 
       <section id="payment_order_form">
 
-        <div class="block">
-          <div class="order_summary">
+        <div id="order_summary">
+          <!-- <div class="block"> -->
             <h4 id="order-summary-title">Order Summary</h4>
 
             <div class="order-line">
@@ -70,12 +70,12 @@
               <p class="summary-right">$77.40</p>
             </div>
 
-            <div class="order-line order-total">
+            <div class="order-line order-total seperator-line">
               <h4 id="order-total-title">Order Total</h4>
               <h4 id="order-total-price">$722.40</h4>
             </div>
-
-            <div class="shipping-address">
+<!--
+            <div class="shipping-address seperator-line">
               <div class="order-line">
                 <h4 class="summary-left">Shipping Address</h4>
                 <p class="summary-right"><a href="#" class="edit-link">Edit</a></p>
@@ -88,7 +88,7 @@
               </p>
             </div>
 
-            <div class="shipping-method">
+            <div class="shipping-method seperator-line">
               <div class="order-line">
                 <h4 class="summary-left">Shipping Method</h4>
                 <p class="summary-right"><a href="#" class="edit-link">Edit</a></p>
@@ -98,14 +98,77 @@
                 Delivers in 7-10 Business Days
               </p>
             </div>
-
-          </div>
+-->
+          <!-- </div> -->
         </div>
 
-        <div class="block">
-          <div class="payment_form">
+        <div id="payment_form">
+          <div class="block">
 
-            <h4 id="card-info-title">Payment Method</h4>
+            <h4 id="card-info-title">Shipping Address</h4>
+            <div class="shipping_input">
+
+              <div class="shipping_name">
+                <label for="ship_name" class="text-label">Full Name</label>
+                <input type="text" id="ship_name" class="input-box">
+              </div><br>
+
+              <div class="shipping_address">
+                <label for="ship_street" class="text-label">Street Address</label>
+                <input type="text" id="ship_street" class="input-box">
+              </div><br>
+
+              <div class="shipping_apt">
+                <label for="ship_apt" class="text-label">Apt/Suite (Optional)</label>
+                <input type="text" id="ship_apt" class="input-box"><br>
+              </div><br>
+
+              <div class="shipping_city_prov">
+                <div class="shipping_city">
+                  <label for="ship_city" class="text-label">City</label>
+                  <input type="text" id="ship_city" class="input-box"><br>
+                </div><br>
+
+                <div class="ship_province">
+                  <label class="text-label">Province</label><br>
+
+                  <div class="form_select">
+                    <select name="province" id="province_option"><br>
+                      <option value="1">British Columbia</option>
+                      <option value="2">Alberta</option>
+                      <option value="3">Saskatchewan</option>
+                      <option value="4">Manitoba</option>
+                      <option value="5">Ontario</option>
+                      <option value="6">Quebec</option>
+                      <option value="7">Newfoundland & Labrador</option>
+                      <option value="8">New Brunswick</option>
+                      <option value="9">Prince Edward Island</option>
+                      <option value="10">Nova Scotia</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+
+              <div class="shipping_postal">
+                <label for="ship_postal" class="text-label">Postal Code</label>
+                <input type="text" id="ship_postal" class="input-box"><br>
+              </div><br>
+
+              <div class="shipping_country">
+                <label for="ship_country" class="text-label">Country</label>
+                <input type="text" id="ship_country" class="input-box" placeholder="Canada"><br>
+              </div><br>
+
+              <div class="shipping_phone">
+                <label for="ship_phone" class="text-label">Phone Number</label>
+                <input type="text" id="ship_phone" class="input-box"><br>
+              </div><br>
+
+            </div>
+
+            <div class="seperator-line">
+              <h4 id="card-info-title">Payment Method</h4>
+            </div>
             <div class="pay_method">
               <div class="method1">
                 <input type="radio" value="radio_btn" name="method">
