Fix checkout cart table

--- a/checkout_cart.html
+++ b/checkout_cart.html
@@ -51,7 +51,7 @@
 
       <section id="checkout_cart">
 
-        <table>
+        <table id="view_cart">
             <thead>
               <tr>
                 <th scope="col" id="product-table-title" colspan="2">Your Items</th>
