--- a/process.html
+++ b/process.html
@@ -51,7 +51,7 @@
           <h3>WHO WE ARE</h3>
           <hr>
         </div>
-        <div class="about-detail">
+        <div id="about-detail">
           <p>
             <br><br><br><br>
             We are at the forefront of the slow fashion revolution. Analogous to the recently shifted food paradigm, we insist on the most premium and transparent methods of garment creation. We employ a hybrid of artisan-care, environment-sensitivity and local machine-power. By incorporating eco-friendly textiles, natural dyeing and American manufacturing, each Olderbrother garment is subtly unique. At the end of the garments’ lifetime, it can be buried in your backyard.
@@ -66,7 +66,7 @@
           <br>
           <hr>
         </div>
-        <div class="about-detail">
+        <div id="about-detail">
           <br><br><br><br>
           <table>
             <tr>
@@ -95,7 +95,7 @@
             <br>
             <hr>
           </div>
-          <div class="about-detail">
+          <div id="about-detail">
             <br><br><br><br>
             <h4>PO Box 28187 <br>
               Portland, OR 97228 <br>
