Change image on process

--- a/process.html
+++ b/process.html
@@ -52,6 +52,7 @@
           <hr>
         </div>
         <div id="about-detail">
+          <img src="img/imagery06.jpg" alt="">
           <p>
             <br><br><br><br>
             We are at the forefront of the slow fashion revolution. Analogous to the recently shifted food paradigm, we insist on the most premium and transparent methods of garment creation. We employ a hybrid of artisan-care, environment-sensitivity and local machine-power. By incorporating eco-friendly textiles, natural dyeing and American manufacturing, each Olderbrother garment is subtly unique. At the end of the garments’ lifetime, it can be buried in your backyard.
