Update grids.css, main.css, home.html

--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
 
       <!-- BANNER SHOT, MULTI-PRODUCT LIST, FOOTER -->
 
-        <section class="hero-banner">
+        <section class="hero-banner-img">
           <div class="hero-banner-inner">
             <h1>Fashion celebrating the quirky singularity of life.</h1>
           </div>
