Fix main.css, update shop, checkout html files

--- a/checkout_cart.html
+++ b/checkout_cart.html
@@ -55,8 +55,8 @@
             <thead>
               <tr>
                 <th scope="col" id="product-table-title" colspan="2">Your Items</th>
-                <th scope="col" id="quantity-table-title">Quantity</th>
-                <th scope="col" id="price-table-title">Price</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Price</th>
               </tr>
             </thead>
 
