--- a/shop.html
+++ b/shop.html
@@ -121,6 +121,8 @@
             </a>
           </div>
           <section class="product_quick_info">
+            <h3 class="product_name"><a href="#">Jeans</a></h3>
+            <h4>Sky Indigo</h4>
             <p class="price">$230.00</p>
           </section>
         </div>
