Add journal.css into main.css & change journal.html

--- a/journal.html
+++ b/journal.html
@@ -46,46 +46,46 @@
     <!-- COMPANY UPDATES / EVENTS -->
     <div class="content_container">
 
-        <section id="journal">
+      <div id="journal-items">
+        <div class="items-text">
+          <h1>JOURNAL</h1>
+        </div>
+      </div>
 
-        <div class="main_journal">
-          <div class="box">
-            <div class="box-image">
-              <div class="image-link-container">
-                <a href="#"><img src="img/saffron-dye.jpg" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
-                <div class="img-hover-box">
-                  <div class="img-hover-text">Olderbrother Featured in Bon Appétit</div>
+
+      <section id="journal">
+      <div class="main_journal">
+        <div class="box">
+          <div class="box-image">
+            <div class="image-link-container">
+              <a href="#"><img src="img/look-vest-black-indigo.png" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
+              <div class="img-hover-box">
+                <div class="img-hover-text">
+                  <a href="#">Olderbrother Featured in Bon Appétit</a>
                 </div>
               </div>
-            </div>
-            <div class="box-text">
-              <a href="#">
-                <h3>Olderbrother Featured in Bon Appétit</h3>
-              </a>
-              <h5>By Amiel Stanek</h5>
-              <h5>Photos by Alex Lau</h5>
-              <p>Bobby Bonaparte and Max Kingery, the duo behind the fashion line Olderbrother, could give a TED Talk on the nightmarish impact the garment industry has on the environment. </p>
-
             </div>
           </div>
+          <div class="box-text">
+
+            <h5>By Amiel Stanek</h5>
+            <h5>Photos by Alex Lau</h5>
+          </div>
+        </div>
           <div class="box">
             <div class="box-image">
               <div class="image-link-container">
-                <a href="#"><img src="img/imagery03.jpg" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
+                <a href="#"><img src="img/blazer-dark-indigo.png" class="img-link" alt="Connecting the Dots"></a>
                 <div class="img-hover-box">
-                  <div class="img-hover-text">Hand Me Downs - NYC Pop Up</div>
+                  <div class="img-hover-text">
+                    <a href="#">Connecting the Dots</a>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="box-text">
-              <a href="#">
-                <h3>Hand Me Downs - NYC Pop Up</h3>
-              </a>
-              <h5>Dates: Wednesday September 13 - Monday September 18</h5>
-              <h5>Hours: 11-6</h5>
-              <h5>Address:171 Elizabeth Street, New York, NY 10012</h5>
-              <p>We're popping up in New York to present our latest Hand Me Downs collection.
-              </p>
+              <h5>Amanda Ringstad</h5>
+              <h5>Nov 30, 2016</h5>
             </div>
           </div>
           <div class="box">
@@ -93,46 +93,67 @@
               <div class="image-link-container">
                 <a href="#"><img src="img/imagery06.jpg" class="img-link" alt="The Gallos - Morning Routine"></a>
                 <div class="img-hover-box">
-                  <div class="img-hover-text">The Gallos - Morning Routine</div>
+                  <div class="img-hover-text"><a href="#">
+                  The Gallos - Morning Routine</a></div>
                 </div>
               </div>
             </div>
             <div class="box-text">
-              <a href="#">
-                <h3>The Gallos - Morning Routine</h3>
-              </a>
               <h5>@carissajg & @andrewgallo</h5>
               <h5>May 02, 2017</h5>
-              <p>Andrew and Carissa Gallo stick to a fairly regimented state of morning affairs. Good habits are formed through repetition. At the finest hour of golden light they awaken to brainstorm breakfast ideas and how to maximize the day.
-              </p>
             </div>
-
-
+          </div>
+        </div>
+        <div class="main_journal">
+          <div class="box">
+            <div class="box-image">
+              <div class="image-link-container">
+                <a href="#"><img src="img/03.jpg" class="img-link" alt="Connecting the Dots"></a>
+                <div class="img-hover-box">
+                  <div class="img-hover-text">
+                    <a href="#">Connecting the Dots</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-text">
+              <h5>Amanda Ringstad</h5>
+              <h5>Nov 30, 2016</h5>
+            </div>
           </div>
           <div class="box">
             <div class="box-image">
               <div class="image-link-container">
-                <a href="#"><img src="img/imagery02.jpg" class="img-link" alt="Connecting the Dots"></a>
+                <a href="#"><img src="img/imagery04.jpg" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
                 <div class="img-hover-box">
-                  <div class="img-hover-text">Connecting the Dots</div>
+                  <div class="img-hover-text">
+                    <a href="#">Olderbrother Featured in Bon Appétit</a>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="box-text">
-              <a href="#">
-                <h3>Connecting the Dots</h3>
-              </a>
-              <h5>Amanda Ringstad</h5>
-              <h5>Nov 30, 2016</h5>
-              <p>Amanda Ringstad connects the dots of natural dyes to our garments. <br>Interspersed between natural dye mobiles made of cochineal, iron and fustic are various bodies from Autumn Winter 2016.
-              </p>
+              <h5>By Amiel Stanek</h5>
+              <h5>Photos by Alex Lau</h5>
             </div>
           </div>
-        </div>
-
-    </section>
-
-  </div>
-
+          <div class="box">
+            <div class="box-image">
+              <div class="image-link-container">
+                <a href="#"><img src="img/06.jpg" class="img-link" alt="Connecting the Dots"></a>
+                <div class="img-hover-box">
+                  <div class="img-hover-text">
+                    <a href="#">Connecting the Dots</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-text">
+              <h5>Amanda Ringstad</h5>
+              <h5>Nov 30, 2016</h5>
+            </div>
+          </div>
+  </section>
+</div>
   </body>
 </html>
